--- a/GM-Assignment/Home/Base.lproj/Main.storyboard
+++ b/GM-Assignment/Home/Base.lproj/Main.storyboard
@@ -57,38 +57,38 @@
                         <color key="backgroundColor" name="TableBackground"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="HistoryTableViewCell" id="V2e-Ic-9xq" customClass="HistoryTableViewCell" customModule="GM_Assignment" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="102.5"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="104.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="V2e-Ic-9xq" id="soR-xw-9kT">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="102.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="104.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B3O-gA-iRa" userLabel="Card View">
-                                            <rect key="frame" x="8" y="8" width="359" height="86.5"/>
+                                            <rect key="frame" x="8" y="8" width="359" height="88.5"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="SjM-3R-8JA">
-                                                    <rect key="frame" x="16" y="16" width="327" height="54.5"/>
+                                                    <rect key="frame" x="16" y="16" width="327" height="56.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JZs-Nb-Mqo" userLabel="Author Label">
-                                                            <rect key="frame" x="0.0" y="0.0" width="327" height="17"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="327" height="18"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                                             <color key="textColor" name="PrimaryText"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Commit Message" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E9U-WU-lVB" userLabel="Message Label">
-                                                            <rect key="frame" x="0.0" y="17" width="327" height="17"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <rect key="frame" x="0.0" y="18" width="327" height="18"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <color key="textColor" name="PrimaryText"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2iP-N8-Lbs" userLabel="Spacer">
-                                                            <rect key="frame" x="0.0" y="34" width="327" height="6"/>
+                                                            <rect key="frame" x="0.0" y="36" width="327" height="6"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="6" id="38f-i4-Dzc"/>
                                                             </constraints>
                                                         </view>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hash Value" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L4I-AB-03W" userLabel="Hash Label">
-                                                            <rect key="frame" x="0.0" y="40" width="327" height="14.5"/>
+                                                            <rect key="frame" x="0.0" y="42" width="327" height="14.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <color key="textColor" name="SecondaryText"/>
                                                             <nil key="highlightedColor"/>
